--- a/dependency-injection-console/dependency-injection-console.csproj
+++ b/dependency-injection-console/dependency-injection-console.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\src\Shared\Shared.csproj" />
+  </ItemGroup>
+
 </Project>
