Restructure solution into src hierarchy

--- a/src/01-DesignPatterns/DependencyInjection/DependencyInjection.csproj
+++ b/src/01-DesignPatterns/DependencyInjection/DependencyInjection.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>dependency_injection_console</RootNamespace>
+    <RootNamespace>DesignPatterns.DependencyInjection</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
